# dinox

./: .gitignore  AI_GUIDELINES.md  README.md  dino.doap  im.github.rallep71.DinoX.json  install.sh  meson.build
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BugReport.yml  CrashReport.yml  FeatureRequest.yml  config.yml
.github/workflows/: build-appimage.yml  build.yml  pages.yml  release.yml  windows-build.yml
docs/: security-audit.html
docs/internal/: BUILD.md  CHANGELOG.md  DEBUG.md  DEVELOPMENT_PLAN.md  SCROLL_BUG_ANALYSIS.md  WINDOWS_BUILD.md  WINDOWS_BUILD_EN.md
libdino/: meson.build
libdino/src/entity/: account.vala  settings.vala
libdino/src/security/: key_manager.vala
libdino/src/service/: avatar_manager.vala  call_peer_state.vala  (+15 more)
main/: meson.build
main/data/: dinox.service  file_send_overlay.ui  gresource.xml  join_room_dialog1.ui  main_window.ui  menu_add.ui
main/po/: POTFILES  ar.po  ca.po  cs.po  da.po  de.po  dino.pot  el.po  en.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  gl.po  hi.po  hu.po  hy.po  ia.po  id.po  ie.po  is.po  it.po  ja.po  kab.po  ko.po  lb.po  lt.po  lv.po  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  si.po  (+9 more)
main/src/: main.vala
main/vapi/: systray_win32.vapi
plugins/bot-features/: BUG_AUDIT.md
plugins/mqtt/: meson.build
plugins/notification-sound/: meson.build
plugins/notification-sound/src/: plugin_windows.vala
qlite/src/: database.vala  upsert_builder.vala
scripts/: build-appimage.sh  ci-build-deps.sh  run_all_tests.sh  update_dist.sh
xmpp-vala/: meson.build
(+125 files in other folders)
